# jiagon

./: .gitignore  .vercelignore  AGENTS.md  Anchor.toml  Cargo.toml  README.md  env.example  foundry.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
apps/mobile/: App.tsx  README.md  app.config.js  entrypoint.js  package.json
apps/mobile/src/: config.ts  jiagonApi.ts  mobileWallet.ts
contracts/: ReceiptCredentialRegistry.sol
docs/: agentic-pos-spec.md  coderabbit-followup-workflow.md  product-ready-receipt-passport-spec.md  solana-mobile-track-spec.md
docs/deploy/: bnb-testnet.md
docs/workflows/: secure-ship.md
programs/jiagon_credit/: Cargo.toml
programs/jiagon_credit/src/: lib.rs
public/: jiagon-demo-brief.pptx
script/: DeployReceiptCredentialRegistry.s.sol
scripts/: jiagon-agent.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/agent-order/: page.tsx
src/components/: AppData.jsx  IOSFrame.jsx  JiagonCreditApp.tsx  screens.jsx
src/lib/: agentDiscovery.ts  agentTrust.ts  demoReadiness.ts  merchantAdapters.ts  merchantCatalog.ts  merchantOrderPurpose.ts  privyConfig.ts  receiptPublish.ts  solanaCredit.ts  solanaNetwork.ts  solanaOwnerLink.ts  solayerProof.ts
src/server/: merchantAuth.ts  merchantNegotiation.ts  merchantOrderStore.ts  moonpayCommerce.ts  privyAuth.ts  receiptStore.ts  shopifyCommerce.ts  solanaBubblegum.ts  solanaCreditDeposit.ts  solanaPay.ts  solayerProofSigner.ts  telegramMerchantNotify.ts
test/: DeployReceiptCredentialRegistry.t.sol  ReceiptCredentialRegistry.t.sol
(+49 files in other folders)
