[package]
name = "jiagon_credit"
version = "0.1.0"
description = "Jiagon purpose-bound credit state program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jiagon_credit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
